feat: add rule that allows es6 and for of and for in loops

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,10 @@
   "extends": "airbnb",
   "plugins": ["jest"],
   "env": {
-    "jest/globals": true
+    "jest/globals": true,
+    "es6": true
+  },
+  "rules": {
+    "no-restricted-syntax": ["error", "LabeledStatement", "WithStatement"]
   }
 }
